@@ -1,10 +1,0 @@
-#ifndef GAUSSQUAD_H
-#define GAUSSQUAD_H
-
-namespace finufft {
-namespace quadrature {
-void legendre_compute_glr(int n, double x[], double w[]);
-} // namespace quadrature
-} // namespace finufft
-
-#endif
