@@ -1,8 +1,0 @@
-LICENSE info for legendre_rule_fast.c ONLY:
-
-According to
-https://people.sc.fsu.edu/~jburkardt/c_src/legendre_rule_fast/legendre_rule_fast.html
-
-The computer code and data files described and made available on this web page are distributed under the GNU LGPL license:
-
-https://www.gnu.org/licenses/lgpl-3.0.en.html
