@@ -1,6 +1,10 @@
 List of features / changes made / release notes, in reverse chronological order.
 If not stated, FINUFFT is assumed (cuFINUFFT <=1.3 is listed separately).
 
+
+* replaced LGPL-licensed Gauss-Legendre quadrature code by Apache2-licensed
+  code adapted from Jason Kaye's cppdlr. CPU only for now. PR #692 (Barnett).
+
 V 2.4.0 (5/27/25)
 
 * slight accuracy improvements for small N by use of ceil in nf choice
